# guess-project

./: .cursorrules  README.md  TODO.md  checklist.yaml  hello.py  pyproject.toml
task/done/: unittest.md
task/todo/: ci.md  coverage.md  refactoring.md  unittest.md
tests/: conftest.py
tests/unit/: test_monte_carlo.py  test_percentile.py  test_velocity_posterior.py  test_velocity_sampler.py
