[project]
name = "guess-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "japanize-matplotlib>=1.1.3",
    "matplotlib-fontja>=1.0.0",
    "matplotlib>=3.9.3",
    "pandas>=2.2.3",
    "scipy>=1.14.1",
    "streamlit>=1.40.2",
]
